cf-stack/vpc.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for creating a the network for the infrastructure'

Parameters:
  EnvironmentName:
    Type: String
    Description: 'The name of the environment. This will be used as a prefix for all resources created by this template.'
    AllowedPattern: '^[a-zA-Z0-9]+$'
    ConstraintDescription: 'Environment name must be alphanumeric and cannot contain spaces.'
  
  VpcCIDR:
    Type: String
    Description: 'The CIDR block for the VPC.'
    Default: '10.0.0.0/16'

  PublicSubnet1CIDR:
    Type: String
    Description: 'The CIDR block for the first public subnet.'
    Default: '10.0.1.0/24'

  PublicSubnet2CIDR:
    Type: String
    Description: 'The CIDR block for the second public subnet.'
    Default: '10.0.2.0/24'

  PrivateSubnet1CIDR:
    Type: String
    Description: 'The CIDR block for the first private subnet.'
    Default: '10.0.3.0/24'

  PrivateSubnet2CIDR:
    Type: String
    Description: 'The CIDR block for the second private subnet.'
    Default: '10.0.4.0/24'








Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-vpc'

 #################### Creates an Internet Gateway and attaches it to the VPC ###############
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-igw'


  AttachInternetGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway


###############  Creates public and private subnets in two availability zones ###############
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true
  
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: true

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: !Select [ 0, !GetAZs '' ]

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone: !Select [ 1, !GetAZs '' ]

############  Creates Elastic IPs for the NAT Gateways ############
  
  ElasticIP1:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  ElasticIP2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

############  Creates NAT Gateways in the public subnets ############

  NatGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt ElasticIP1.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt ElasticIP2.AllocationId
      SubnetId: !Ref PublicSubnet2

############  Creates route tables for the public and private subnets ############

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-public-rt'

  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:   
        - Key: Name
          Value: !Sub '${EnvironmentName}-private-rt1'

  PrivateRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:     
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-private-rt2'

###########  Creates routes for the public and private subnets ############
  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway1

  PrivateRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2 
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway2

###########  Associates the public and private subnets with their respective route tables ############
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable 

  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2 
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
  
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2 
      RouteTableId: !Ref PrivateRouteTable2





Output:
  VPCId:
    Description: 'The ID of the VPC.'
    Value: !Ref VPC
    Export:
      Name: !Sub '${EnvironmentName}-VPCId'

  PublicSubnet1Id:
    Description: 'The ID of the first public subnet.'
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub '${EnvironmentName}-PublicSubnet1Id'

  PublicSubnet2Id:
    Description: 'The ID of the second public subnet.'
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub '${EnvironmentName}-PublicSubnet2Id'

  PrivateSubnet1Id:
    Description: 'The ID of the first private subnet.'
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${EnvironmentName}-PrivateSubnet1Id'

  PrivateSubnet2Id:
    Description: 'The ID of the second private subnet.'
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${EnvironmentName}-PrivateSubnet2Id'
